--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
   "homepage": "https://github.com/OtarKebadze/backend#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "connect-mongo": "^4.6.0",
+    "cookie": "^0.5.0",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "nodemon": "^2.0.16",
     "normalizr": "^3.6.2",
+    "parser": "^0.1.4",
     "socket.io": "^4.5.1"
   },
   "devDependencies": {
